WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207520
[iOS] Crash when granting access to asset services
https://bugs.webkit.org/show_bug.cgi?id=207520
Summary
[iOS] Crash when granting access to asset services
Per Arne Vollan
Reported
2020-02-10 16:41:30 PST
When the WKWebView is being granted access to asset services, the WebContent process is crashing.
Attachments
Patch
(7.77 KB, patch)
2020-02-10 16:57 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-02-10 16:56:56 PST
rdar://problem/59321848
Per Arne Vollan
Comment 2
2020-02-10 16:57:52 PST
Created
attachment 390319
[details]
Patch
Brent Fulgham
Comment 3
2020-02-10 17:01:10 PST
Comment on
attachment 390319
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=390319&action=review
r=me
> Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:1522 > + SandboxExtension::createHandleForMachLookup("com.apple.mobileassetd.v2", WTF::nullopt, mobileAssetHandleV2);
Doh! I missed that earlier.
Per Arne Vollan
Comment 4
2020-02-10 17:02:12 PST
(In reply to Brent Fulgham from
comment #3
)
> Comment on
attachment 390319
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=390319&action=review
> > r=me > > > Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:1522 > > + SandboxExtension::createHandleForMachLookup("com.apple.mobileassetd.v2", WTF::nullopt, mobileAssetHandleV2); > > Doh! I missed that earlier.
Me too!
Per Arne Vollan
Comment 5
2020-02-10 17:02:32 PST
(In reply to Brent Fulgham from
comment #3
)
> Comment on
attachment 390319
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=390319&action=review
> > r=me > > > Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:1522 > > + SandboxExtension::createHandleForMachLookup("com.apple.mobileassetd.v2", WTF::nullopt, mobileAssetHandleV2); > > Doh! I missed that earlier.
Thanks for reviewing!
WebKit Commit Bot
Comment 6
2020-02-10 17:46:08 PST
Comment on
attachment 390319
[details]
Patch Clearing flags on attachment: 390319 Committed
r256234
: <
https://trac.webkit.org/changeset/256234
>
WebKit Commit Bot
Comment 7
2020-02-10 17:46:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug